python/testData/highlighting/fStringEmptyExpressions.py
f'{<error descr="Expression expected">}</error>'
f'{<error descr="Expression expected">!</error>r}'
f'{<error descr="Expression expected">:</error>2.3}'
f'{42:2.{<error descr="Expression expected">}</error>}'
f'{<error descr="Expression expected">  </error>}'
f'{42:{<error descr="Expression expected"> </error>}}'
f'{<error descr="Expression expected">    </error>!r:{<error descr="Expression expected">   </error>:42}}'